--- a/src/app/components/admin/add-product/add-product.component.html
+++ b/src/app/components/admin/add-product/add-product.component.html
@@ -1,9 +1,9 @@
 <!-- product-form.component.html -->
 <!-- {{ product | json }} -->
 
-<div class="container mt-5">
-  <div class="card">
-    <div class="card-body shadow-sm form-control border-dark rounded-3">
+<div class="container mt-2">
+  <div class="card shadow-sm form-control border-dark rounded-3 mt-2 mb-3 ">
+    <div class="card-body ">
       <div class="container text-center">
         <i-tabler class="custom-icon-size" name="script-plus"></i-tabler>
         <p class="h3 text-center">Add Product</p>
@@ -29,18 +29,25 @@
         </div>
 
         <div class="form-group mb-2">
-          <label for="description">Description</label>
-          <textarea
+          <label class="mb-2" for="description">Description</label>
+          <!-- <textarea
             class="form-control mt-2"
             id="description"
             [(ngModel)]="product.description"
             name="description"
             #descriptionField="ngModel"
             required
-          ></textarea>
+          ></textarea> -->
+          <quill-editor
+            classes="form-control border-dark"
+            [style]="{ height: '180px', width:'100%' }"
+            [placeholder]="'Enter Description Here'"
+            [(ngModel)]="product.description"
+            #descriptionField="ngModel"
+            name="description"
+          ></quill-editor>
 
-          <!-- In your component's template
-          <quill-editor #descriptionField="ngModel" [(ngModel)]="product.description"></quill-editor> -->
+          <!-- [config]="editorConfig" (onContentChanged)="handleContentChange($event)" -->
 
           <span
             [hidden]="descriptionField.valid || !descriptionField.touched"
@@ -161,8 +168,13 @@
           </select>
         </div>
 
-        <!-- <div class="form-group mb-2">
+        <!-- PRODUCT IMAGE  -->
+
+        <div class="form-group mb-2">
             <label for="productImageName">Product Image</label>
+            <div class="text-center my-3" *ngIf="imageData.file">
+              <img style="height: 250px; width: auto;" [src]="imageData.previewImageUrl" alt="preview product image"/>
+            </div>
             <input 
               type="file" 
               class="form-control-file mx-3" 
@@ -170,14 +182,26 @@
               [(ngModel)]="product.productImageName" 
               name="productImageName" 
               #productImageNameField="ngModel" 
+              accept="image/*"
+              (change)="imageFieldChanged($event)"
             />
+            <button
+            type="button"
+            (click)="resetImage()"
+            class="btn btn-secondary btn-sm ms-2"
+          >
+           Reset Image
+          </button>
+
+
             <span 
               [hidden]="productImageNameField.valid || !productImageNameField.touched" 
               class="text-danger mt-2 mx-2"
             >
               Product Image is required!
             </span>
-          </div> -->
+          </div>
+
 
         <div class="container text-center mt-3">
           <button type="submit" class="btn btn-primary btn-md">
