--- a/src/app/components/admin/view-products/view-products.component.html
+++ b/src/app/components/admin/view-products/view-products.component.html
@@ -1,1 +1,57 @@
-<p>view-products works!</p>
+<div class="row">
+  <div class="col-md-12">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">S.No.</th>
+            <th scope="col">Name</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Price</th>
+            <th scope="col">Discounted Price</th>
+            <th scope="col">Stock</th>
+            <th scope="col">Live</th>
+            <th scope="col">Category</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let product of productsResponse?.content; let i = index">
+            <td>
+              {{i+1}}  
+            </td>
+            <td>
+                {{product.title}}
+            </td>
+            <td>
+                {{product.quantity}}
+            </td>
+            <td>
+                {{product.price}}
+            </td>
+            <td>
+                {{product.discountedPrice}}
+            </td>
+            <td>
+                {{product.stock?'Yes':'No'}}
+            </td>
+            <td>
+                {{product.live?'Live':'Not Live'}}
+            </td>
+            <td>
+                {{product.category.title}}
+            </td>
+            <!-- <ng-container *ngIf="product.category.title; else noCategory">
+                {{ product.category.title }}
+              </ng-container>
+              <ng-template #noCategory>No Category</ng-template> -->
+            <td>
+                <button class="btn btn-primary btn-sm">Update</button>
+                <button class="btn btn-danger btn-sm ms-2">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
