--- a/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
@@ -25,7 +25,7 @@
         </ul>
     </div>
     <div class="content px-2 py-2">
-        <div class="container">
+        <div class="container-fluid">
             <router-outlet></router-outlet>
         </div>
     </div>
