--- a/src/app/components/common/custom-navbar/custom-navbar.component.html
+++ b/src/app/components/common/custom-navbar/custom-navbar.component.html
@@ -22,11 +22,14 @@
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="'/home'">Home</a>
+            <a routerLinkActive="active" class="nav-link " aria-current="page" [routerLink]="'/home'">Home</a>
+          </li>
+          <li class="nav-item">
+            <a routerLinkActive="active" class="nav-link " aria-current="page" [routerLink]="'/store'">Store</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/categories'">Categories</a>
+            <a routerLinkActive="active" class="nav-link" [routerLink]="'/categories'">Categories</a>
           </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,21 +43,27 @@
             </ul>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/features'">Features</a>
+            <a routerLinkActive="active" class="nav-link" [routerLink]="'/features'">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/about'">About</a>
+            <a routerLinkActive="active" class="nav-link" [routerLink]="'/about'">About</a>
           </li>
         </ul>
+
+        <ul class="navbar-nav">
+          <li routerLinkActive="active" class="nav-item"><a class="nav-link" [routerLink]="'/cart'">Cart
+          <span *ngIf="cart?.cartId">({{cart?.items?.length}})</span></a></li>
+        </ul>
+
         <ul class="navbar-nav" *ngIf="!loginData?.login">
-            <li class="nav-item"><a class="nav-link" [routerLink]="'/login'">Login</a></li>
-            <li class="nav-item"><a class="nav-link" [routerLink]="'/signup'">Signup</a></li>
+            <li routerLinkActive="active" class="nav-item"><a class="nav-link" [routerLink]="'/login'">Login</a></li>
+            <li routerLinkActive="active" class="nav-item"><a class="nav-link" [routerLink]="'/signup'">Signup</a></li>
         </ul>
 
         <ul class="navbar-nav" *ngIf="loginData?.login">
-          <li class="nav-item" *ngIf="isAdmin | async"><a class="nav-link " style="cursor: pointer;" [routerLink]="'/admin/home'">Admin Dashboard</a></li>
-          <li class="nav-item"><a class="nav-link " style="cursor: pointer;" [routerLink]="'/profile'">{{loginData?.user?.name}}</a></li>
-          <li class="nav-item"><a class="nav-link " style="cursor: pointer;" (click)="logout()">Logout</a></li>
+          <li routerLinkActive="active" class="nav-item" *ngIf="isAdmin | async"><a class="nav-link " style="cursor: pointer;" [routerLink]="'/admin/home'">Admin Dashboard</a></li>
+          <li routerLinkActive="active" class="nav-item"><a class="nav-link " style="cursor: pointer;" [routerLink]="'/profile'">{{loginData?.user?.name}}</a></li>
+          <li routerLinkActive="active" class="nav-item"><a class="nav-link " style="cursor: pointer;" (click)="logout()">Logout</a></li>
         </ul>
 
       </div>
