--- a/src/app/components/common/single-category-view/single-category-view.component.html
+++ b/src/app/components/common/single-category-view/single-category-view.component.html
@@ -3,6 +3,7 @@
       [src]="category?.coverImage"
       class="card-img-top cover-image"
       [alt]="category?.title"
+      onerror="this.onerror=null; this.src='/assets/images/default.png';"
     />
     <div class="card-body">
       <h5 class="card-title">{{ category?.title }}</h5>
