Razor Pay Integration done.

--- a/src/app/components/common/user-view/user-view.component.html
+++ b/src/app/components/common/user-view/user-view.component.html
@@ -2,7 +2,7 @@
     <div class="card-header">USER INFORMATION</div>
     <div class="card-body">
         <div class="image-container text-center">
-            <img class="img" src="{{userService.getUserImageUrl(user.userId)}}" alt="profile pic"
+            <img class="img" src="{{userService.getUserImageUrl(user)}}" alt="profile pic"
             onerror="this.onerror=null; this.src='/assets/images/default_profile.png';"
             >
         </div>
